# smartdiet_ml_api

./: .dockerbuildrc  .dockerignore  .gitignore  BUILD_COMMANDS.txt  CHANGELOG.md  CLAUDE.md  DOCKER_CACHING_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  IMPROVEMENTS.md  Makefile  QUICK_START.md  README.md  app.py  docker-compose.yaml  ml_example.py  pyproject.toml  requirements.txt
api/: models.py
app/: .dockerignore  Dockerfile  app.py  logging_config.py  ml_example.py  requirements.txt  settings.py
app/api/: README.md  __init__.py  models.py
app/configs/: configs.local.yaml  configs.yaml
app/ml/: README.md  __init__.py  config.py  data_manager.py  feature_extractor.py  image_search_engine.py  utils.py
app/notebooks/: build_index.ipynb  generate_index.ipynb
index/: products_metadata.json
ml/: __init__.py  config.py  data_manager.py  example.py  feature_extractor.py  image_retrieval.py  image_search_engine.py  utils.py
web/: .dockerignore  Dockerfile  app.py  user_restrictions.json
