[project]
name = "product-search-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "torch",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
